# kairos

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  TRADING_README.md  go.mod  go.sum  pyproject.toml  telegram_relay.py  test_mcp.py  test_report.md  test_trading.sh
.github/workflows/: ci.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.trellis/: .template-hashes.json
config/: config.yaml.example
docs/: architecture-review.md  architecture.md
go/: .golangci.yml  Makefile
scripts/: coinglass_fetch.py
tests/: equiv_scoring_test.go  quick_test.py  test_alert_runner.py  test_arbitrage.py  test_backtest.py  test_binance.py  test_binance_comprehensive.py  test_bybit.py  test_bybit_comprehensive.py  test_cache_manager.py  test_chart_removal.py  test_cli_background_mode.py  test_cli_misc.py  test_cli_setup_wizard.py  test_config.py  test_config_manager.py  test_config_validator.py  test_core_notifier.py  test_core_sentry.py  test_data_init.py  test_data_manager.py  test_detectors.py  test_detectors_price_velocity.py  test_detectors_volume_spike.py  test_error_handler.py  test_exchanges_base.py  test_exchanges_binance.py  test_exchanges_okx.py  test_executor.py  test_executor_comprehensive.py  test_funding_arb.py  test_load_symbols_from_file.py  test_mcp_server.py  test_monitor_top_movers.py  test_notification_enhancements.py  test_notifications_telegram.py  test_okx.py  test_okx_comprehensive.py  test_performance_monitor.py  test_performance_monitor_comprehensive.py  (+20 more)
(+231 files in other folders)
